applications/http-echo/http-echo.yaml
kind: Pod
apiVersion: v1
metadata:
  name: http-echo
  namespace: http-echo-app
  labels:
    app: http-echo
spec:
  containers:
    - name: http-echo
      image: hashicorp/http-echo
      args:
        - "-text=THIS_IS_TEST_APP_BRO !!!"
      ports:
        - containerPort: 5678
---

kind: Service
apiVersion: v1
metadata:
  name: http-echo-service
  namespace: http-echo-app
spec:
  selector:
    app: http-echo
  ports:
    - port: 5678
      targetPort: 5678
      protocol: TCP
