applications/http-echo/http-echo.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo.apptest.com
  namespace: http-echo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: http-echo.apptest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-echo-service
            port:
              number: 5678
